[gd_scene load_steps=13 format=3 uid="uid://cgjwfivoc8wki"]

[ext_resource type="Script" path="res://scenes/Lobby.gd" id="1_i8rer"]
[ext_resource type="PackedScene" uid="uid://cop2o1vtkv1qt" path="res://objects/lobby/MovingBackground.tscn" id="2_pbfn1"]
[ext_resource type="PackedScene" uid="uid://bcm1wt3awqg18" path="res://objects/system/Camera.tscn" id="3_5jgbx"]
[ext_resource type="PackedScene" uid="uid://co6dqvdhklpn5" path="res://objects/lobby/PlayerSlot.tscn" id="3_32tqe"]
[ext_resource type="Animation" uid="uid://bcroi11mupex8" path="res://resources/anims/wobble.res" id="4_3g4sh"]
[ext_resource type="PackedScene" uid="uid://bli02m5v875nl" path="res://objects/system/label/CustomLabel.tscn" id="4_8wgdj"]
[ext_resource type="PackedScene" uid="uid://bwaujkg3fwp0t" path="res://objects/lobby/HintSpawner.tscn" id="5_uy1dg"]
[ext_resource type="Texture2D" uid="uid://c8v20op2i3bd4" path="res://sprites/lobby/title/title_hell.png" id="8_307et"]
[ext_resource type="Texture2D" uid="uid://clva0vo2q5nws" path="res://sprites/lobby/title/subtitle_hell.png" id="9_51yvq"]

[sub_resource type="Animation" id="Animation_6qw7i"]
resource_name = "fade_in"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 1), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_iknuv"]
_data = {
"fade_in": SubResource("Animation_6qw7i")
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_7a0rr"]
_data = {
"wobble": ExtResource("4_3g4sh")
}

[node name="Lobby" type="Node2D"]
modulate = Color(0, 0, 0, 1)
script = ExtResource("1_i8rer")

[node name="Anim" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_iknuv")
}
autoplay = "fade_in"

[node name="MovingBackground" parent="." instance=ExtResource("2_pbfn1")]

[node name="Camera" parent="." instance=ExtResource("3_5jgbx")]

[node name="PlayerSlot0" parent="." instance=ExtResource("3_32tqe")]
position = Vector2(128, 240)

[node name="PlayerSlot1" parent="." instance=ExtResource("3_32tqe")]
position = Vector2(256, 240)
playerId = 1

[node name="PlayerSlot2" parent="." instance=ExtResource("3_32tqe")]
position = Vector2(384, 240)
playerId = 2

[node name="PlayerSlot3" parent="." instance=ExtResource("3_32tqe")]
position = Vector2(512, 240)
playerId = 3

[node name="InitHolder" type="Node2D" parent="."]
position = Vector2(340, 336)
rotation = 6.26638

[node name="Anim" type="AnimationPlayer" parent="InitHolder"]
libraries = {
"": SubResource("AnimationLibrary_7a0rr")
}
autoplay = "wobble"

[node name="WaitingLabel" parent="InitHolder" instance=ExtResource("4_8wgdj")]
text = "sample-text"
fontSize = 2
alignment = 5

[node name="TeamLimitLabel" parent="InitHolder" instance=ExtResource("4_8wgdj")]
text = "sample-text"
fontSize = 2
alignment = 5

[node name="StartLabel" parent="InitHolder" instance=ExtResource("4_8wgdj")]
text = "sample-text"
fontSize = 2
alignment = 5

[node name="HintSpawner" parent="." instance=ExtResource("5_uy1dg")]
position = Vector2(510, 144)

[node name="MenuCanvas" type="CanvasLayer" parent="."]

[node name="VersionLabel" parent="MenuCanvas" instance=ExtResource("4_8wgdj")]
position = Vector2(4, 382)
text = "sample-text"
alignment = 2

[node name="FullscreenLabel" parent="MenuCanvas" instance=ExtResource("4_8wgdj")]
position = Vector2(678, 382)
text = "f - toggle fullscreen"
alignment = 3

[node name="GodotLabel" parent="MenuCanvas" instance=ExtResource("4_8wgdj")]
position = Vector2(340, 382)
text = "made with godot"
alignment = 7

[node name="TitleHolder" type="Node2D" parent="MenuCanvas"]
position = Vector2(340, 52)

[node name="Title" type="Sprite2D" parent="MenuCanvas/TitleHolder"]
scale = Vector2(0.5, 0.5)
texture = ExtResource("8_307et")

[node name="CustomLabel" parent="MenuCanvas/TitleHolder" instance=ExtResource("4_8wgdj")]
position = Vector2(0, 24)
text = "twin stick arena"
fontSize = 2
alignment = 8

[node name="Subtitle" type="Sprite2D" parent="MenuCanvas/TitleHolder"]
visible = false
position = Vector2(0, 24)
scale = Vector2(2, 2)
texture = ExtResource("9_51yvq")
